--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Progress Bar Example</title>
+    <title>PeladoX Progress Bar</title>
     <style>
       .progress-bar {
         width: 20%;
