Dakrer bar background

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       .progress-bar {
         width: 20%;
         height: 20px;
-        background-color: #f1f1f1;
+        background-color: #919191;
         border-radius: 5px;
         margin-top: 20px;
         margin: 0 auto;
