--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>PeladoX Progress Bar</title>
     <style>
+      @font-face {
+        font-family: 'cool-font';
+        src: url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+      }
       .progress-bar {
         width: 20%;
         height: 20px;
@@ -27,10 +31,12 @@
         background-repeat: no-repeat;
       }
       .progress-text {
+        font-family: 'cool-font', sans-serif;
+        font-size: 24px;
+        color: #000;
         text-align: center;
         margin-top: 10px;
         font-weight: bold;
-        font-size: 16px;
       }
     </style>
   </head>
